// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enabled-limit Renders \`enabled-limit\` with custom props 1`] = `
<div
  class="v-list__group"
>
  <div
    class="v-list__group__header"
  >
    <div
      role="listitem"
    >
      <div
        class="v-list__tile theme--light"
      >
        <div
          class="validation-header"
        >
          Custom title
          <span
            class="font-italic caption ml-1"
          >
            (optional)
          </span>
        </div>
      </div>
    </div>
    <div
      class="v-list__group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    mode="in-out"
    name="expand-transition"
  >
    <div
      class="v-list__group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <enabled-limit-field-stub
          label="Custom label"
          name="enabledLimitValue"
          value="[object Object]"
        />
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`enabled-limit Renders \`enabled-limit\` with default props 1`] = `
<div
  class="v-list__group"
>
  <div
    class="v-list__group__header"
  >
    <div
      role="listitem"
    >
      <div
        class="v-list__tile theme--light"
      >
        <div
          class="validation-header"
        >
          
          <!---->
        </div>
      </div>
    </div>
    <div
      class="v-list__group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    mode="in-out"
    name="expand-transition"
  >
    <div
      class="v-list__group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <enabled-limit-field-stub
          label=""
          name="enabledLimitValue"
          value="[object Object]"
        />
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`enabled-limit Renders \`enabled-limit\` with errors 1`] = `
<div
  class="v-list__group"
>
  <div
    class="v-list__group__header"
  >
    <div
      role="listitem"
    >
      <div
        class="v-list__tile theme--light"
      >
        <div
          class="validation-header error--text"
        >
          Custom title
          <span
            class="font-italic caption ml-1"
          >
            (optional)
          </span>
        </div>
      </div>
    </div>
    <div
      class="v-list__group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    mode="in-out"
    name="expand-transition"
  >
    <div
      class="v-list__group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <enabled-limit-field-stub
          label="Custom label"
          name="enabledLimitValue"
          value="[object Object]"
        />
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`enabled-limit Value changed after trigger enabled limit field 1`] = `
<div
  class="v-list__group"
>
  <div
    class="v-list__group__header"
  >
    <div
      role="listitem"
    >
      <div
        class="v-list__tile theme--light"
      >
        <div
          class="validation-header"
        >
          
          <!---->
        </div>
      </div>
    </div>
    <div
      class="v-list__group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    mode="in-out"
    name="expand-transition"
  >
    <div
      class="v-list__group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <enabled-limit-field-stub
          label=""
          name="enabledLimitValue"
          value="[object Object]"
        />
      </div>
    </div>
  </transition-stub>
</div>
`;
